<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_newest"
                    android:title="@string/menu_sort_newest" />
                <item
                    android:id="@+id/action_sort_oldest"
                    android:title="@string/menu_sort_oldest" />
                <item
                    android:id="@+id/action_sort_category"
                    android:title="@string/menu_sort_category" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_toggle_completed"
        android:checkable="true"
        android:title="@string/menu_hide_completed" />
    <item
        android:id="@+id/action_filter_category"
        android:title="@string/menu_filter_category" />
    <item
        android:id="@+id/action_clear_category_filter"
        android:title="@string/menu_clear_filters" />
</menu>
